finished chat swagger
