# backend/docs/swagger.json
@@ -18,6 +18,60 @@
     "host": "localhost:1323",
     "basePath": "/",
     "paths": {
+        "/api/fortune168/v1/block": {
+            "post": {
+                "description": "provider the id of person to be blocked",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "block user from sending message to you",
+                "operationId": "BlockHandler",
+                "parameters": [
+                    {
+                        "description": "id of person to be blocked",
+                        "name": "BlockRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chat.BlockRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Send token if log-in, to check authority to send message",
+                        "name": "Authorization",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid request or invalid jwt",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error message",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/fortune168/v1/confirm_email/{key}": {
             "post": {
                 "description": "send the key from confirmation email to activate",
@@ -44,6 +98,12 @@
                 "responses": {
                     "200": {
                         "description": "email confirmed",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid key",
                         "schema": {
                             "type": "string"
                         }
@@ -121,6 +181,12 @@
                             "type": "string"
                         }
                     },
+                    "400": {
+                        "description": "invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     "500": {
                         "description": "registration is not successful",
                         "schema": {
@@ -156,6 +222,12 @@
                 "responses": {
                     "200": {
                         "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid jwt token",
                         "schema": {
                             "type": "string"
                         }
@@ -199,6 +271,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/auth.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid request",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
@@ -294,6 +372,12 @@
                             "type": "string"
                         }
                     },
+                    "400": {
+                        "description": "invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     "500": {
                         "description": "registration is not successful",
                         "schema": {
@@ -319,7 +403,7 @@
                 "operationId": "SendMessageHandler",
                 "parameters": [
                     {
-                        "description": "Data for creating customer account",
+                        "description": "id to person who will receive message and text",
                         "name": "SendMessageReq",
                         "in": "body",
                         "required": true,
@@ -338,6 +422,12 @@
                 "responses": {
                     "200": {
                         "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid request or invalid jwt",
                         "schema": {
                             "type": "string"
                         }
@@ -387,6 +477,17 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "chat.BlockRequest": {
+            "type": "object",
+            "required": [
+                "blockedUserId"
+            ],
+            "properties": {
+                "blockedUserId": {
                     "type": "string"
                 }
             }
